--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jade": "*",
     "stylus": "*",
     "nib": "*",
-    "canvas": "*"
+    "canvas": "*",
+    "redis": "*",
+    "hiredis": "*"
   }
 }
